--- a/chofer.html
+++ b/chofer.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
 <head>
   <title>Ubicación Móvil</title>
@@ -29,19 +30,21 @@
         lng: lng,
         timestamp: Date.now()
       });
-      console.log("Ubicación enviada:", lat, lng);
+      console.log("Ubicación actualizada:", lat, lng);
     }
 
     function iniciarTracking(nombre) {
       movil = nombre;
       if (navigator.geolocation) {
-        setInterval(() => {
-          navigator.geolocation.getCurrentPosition(enviarUbicacion, (error) => {
-            console.error("Error al obtener ubicación:", error.message);
-          });
-        }, 2000); // Cada 2 segundos
+        navigator.geolocation.watchPosition(enviarUbicacion, (error) => {
+          console.error("Error al obtener ubicación:", error.message);
+        }, {
+          enableHighAccuracy: true,
+          maximumAge: 0,
+          timeout: 5000
+        });
       } else {
-        alert("GPS no disponible en este dispositivo.");
+        alert("Este navegador no soporta geolocalización.");
       }
     }
   </script>
@@ -50,7 +53,6 @@
   <h2>Seleccioná tu móvil</h2>
   <button onclick="iniciarTracking('movil1')">Móvil 1 Santamarina</button>
   <button onclick="iniciarTracking('movil2')">Móvil 2 Santamarina</button>
-  <p>Tu ubicación se está enviando cada 2 segundos...</p>
+  <p>Tu ubicación se está enviando en tiempo real...</p>
 </body>
 </html>
-
